--- a/src/front/styles/home.css
+++ b/src/front/styles/home.css
@@ -10,30 +10,48 @@
 
 body {
   font-family: "Comfortaa", cursive;
+  color: #ffffff;
 }
 
 main {
   min-height: 80vh;
 }
 
-.Fondo {
-  position: relative;
-  width: 1440px;
-  height: 900px;
-  left: 0px;
-  top: 0px;
-  background: url(https://wallpaper.dog/large/5449058.jpg);
-  mix-blend-mode: normal;
-  backdrop-filter: blur(64px);
-}
-
-.Cuadro {
+.welcomebox {
   position: absolute;
+  z-index: 3333;
   width: 660px;
   height: 778px;
   left: 80px;
   top: 61px;
-  opacity: 0.5;
+  opacity: 1;
   background: #ffffff;
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4); /* Black w/opacity/see-through */
   border-radius: 54px;
+}
+
+.art {
+  position: absolute;
+  z-index: 2222;
+  width: 1440px;
+  height: 900px;
+  left: 80px;
+  top: 10px;
+  background: url(https://wallpaper.dog/large/5449058.jpg);
+  mix-blend-mode: normal;
+  backdrop-filter: blur(64px);
+  border-radius: 30px;
+  filter: drop-shadow(0px 0px 94px rgba(0, 0, 0, 0.65));
+}
+
+.back {
+  position: absolute;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  mix-blend-mode: normal;
+  /*filter: blur(74px)*/
+  
+  background: url(https://wallpaper.dog/large/5449058.jpg);
 }
