--- a/src/front/styles/home.css
+++ b/src/front/styles/home.css
@@ -1,10 +1,3 @@
-/*
-    home.css: This website contains selectors only used in home.css
-
-    All pages share the styles on index.css but you should create 
-    one more css for each page that will contain the selected used 
-    on that page only (the ones not reused in other pages).
-*/
 
 @import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap");
 
@@ -53,3 +46,38 @@ main {
   background: url(https://wallpaper.dog/large/5449058.jpg);
 }
 
+.Auth-form-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 60%;
+
+}
+
+.Auth-form {
+  width: 420px;
+  box-shadow: rgb(0 0 0 / 16%) 1px 1px 10px;
+  padding-top: 30px;
+  padding-bottom: 20px;
+  border-radius: 8px;
+  background-color: white;
+}
+
+.Auth-form-content {
+  padding-left: 12%;
+  padding-right: 12%;
+}
+
+.Auth-form-title {
+  text-align: center;
+  margin-bottom: 1em;
+  font-size: 24px;
+  color: rgb(34, 34, 34);
+  font-weight: 800;
+}
+
+label {
+  font-size: 14px;
+  font-weight: 600;
+  color: rgb(34, 34, 34);
+}
