--- a/src/front/styles/register.css
+++ b/src/front/styles/register.css
@@ -11,11 +11,15 @@ main {
 }
 
 .welcomebox {
-  position: absolute;
+  display:flex;
   z-index: 3333;
   width: 40%;
   height: 90%;
   left: 5%;
+  
+  padding-top: 2%;
+  padding-left: 4%;
+  padding-bottom: 4%;
   top: 5%;
   background-color: rgb(226, 178, 134); /* Fallback color */
   background-color: rgba(201, 166, 137, 0.45); /* Black w/opacity/see-through */
@@ -46,6 +50,10 @@ main {
   background: url(https://wallpaper.dog/large/5449058.jpg);
 }
 
+.titulo{
+  display: flex;
+  margin-top: 30%;
+}
 .Auth-form-container {
   display: flex;
   justify-content: center;
