--- a/src/front/styles/profile.css
+++ b/src/front/styles/profile.css
@@ -9,3 +9,13 @@ body {
 main {
   min-height: 80vh;
 }
+
+
+
+.glyphicon {  margin-bottom: 10px;margin-right: 10px;}
+
+.small {
+display: block;
+line-height: 1.428571429;
+color:black;
+}
