--- a/src/front/styles/profile.css
+++ b/src/front/styles/profile.css
@@ -1,4 +1,3 @@
-
 @import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap");
 
 body {
@@ -10,12 +9,50 @@ main {
   min-height: 80vh;
 }
 
-
-
-.glyphicon {  margin-bottom: 10px;margin-right: 10px;}
+.glyphicon {
+  margin-bottom: 10px;
+  margin-right: 10px;
+}
 
 .small {
-display: block;
-line-height: 1.428571429;
-color:black;
+  display: block;
+  line-height: 1.428571429;
+  color: black;
+}
+
+.profilecard {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  max-width: 300px;
+  margin-left: 2.5%;
+  margin-top: 2.5%;
+  text-align: center;
+}
+
+.title {
+  color: grey;
+  font-size: 18px;
+}
+
+button {
+  border: none;
+  outline: 0;
+  display: inline-block;
+  padding: 8px;
+  color: white;
+  background-color: #000;
+  text-align: center;
+  cursor: pointer;
+  width: 100%;
+  font-size: 18px;
+}
+
+a {
+  text-decoration: none;
+  font-size: 22px;
+  color: black;
+}
+
+button:hover,
+a:hover {
+  opacity: 0.7;
 }
