cambios de kiwi

--- a/src/front/styles/profile.css
+++ b/src/front/styles/profile.css
@@ -20,12 +20,19 @@ main {
   color: black;
 }
 
+.covercard {
+  background-image: ;
+
+}
+
 .profilecard {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   max-width: 300px;
   margin-left: 2.5%;
-  margin-top: 2.5%;
+
   text-align: center;
+  background-color: #ffffff;
+
 }
 
 .title {
@@ -39,7 +46,7 @@ button {
   display: inline-block;
   padding: 8px;
   color: white;
-  background-color: #000;
+  background-color:burlywood;
   text-align: center;
   cursor: pointer;
   width: 100%;
