cambios en componentes

--- a/src/front/styles/register.css
+++ b/src/front/styles/register.css
@@ -47,9 +47,9 @@ main {
   background: url(https://wallpaper.dog/large/5449058.jpg);
 }
 
-.titulo {
+.tituloregister {
   display: flex;
-  margin-top: 20%;
+  margin-top: 10%;
   margin-left: 15%;
   
 }
