--- a/src/front/styles/profile.css
+++ b/src/front/styles/profile.css
@@ -37,7 +37,7 @@ main {
   margin-left: 2.5%;
   padding-top: 2%;
   margin-top: 10%;
-  
+  border-radius: 5%;
   text-align: center;
   background-color: #ffffff;
   font-family: "Comfortaa", cursive;
@@ -49,7 +49,8 @@ main {
 }
 
 button {
-  border: none;
+  border: white;
+
   outline: 0;
   display: inline-block;
   padding: 8px;
@@ -62,6 +63,25 @@ button {
   font-family: "Comfortaa", cursive;
 }
 
+.modalprofile{
+  font-family: "Comfortaa", cursive;
+ 
+
+}
+
+.button {
+  border: none;
+  outline: 0;
+  display: inline-block;
+  padding: 8px;
+  color: white;
+  background-color: burlywood;
+  text-align: center;
+  cursor: pointer;
+  width: 100%;
+  font-size: 18px;
+  font-family: "Comfortaa", cursive;
+}
 a {
   text-decoration: none;
   font-size: 22px;
